# TestSigma

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: routes.py
backend/src/core/: tree.py
backend/src/models/: schemas.py
backend/src/services/: ast_parser.py  crawler.py  describer.py  github_app.py  github_fetch.py  graph.py  graph_layers.py  ingest.py  jobs.py  pr_review.py  storage.py
doc/: design.md  explainer.md  sample-output.md
frontend/: package-lock.json  package.json  prisma.config.ts  skills-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/crawl/: route.ts
frontend/app/api/ingest/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: login-form.tsx  signup-form.tsx
frontend/components/dashboard/: ast-graph.tsx  crawl-graph.tsx  dashboard-header.tsx  pr-list.tsx  profile-card.tsx  repo-browser.tsx  repo-stats-dialog.tsx  repo-tools.tsx  repo-workspace.tsx  sign-out-button.tsx  token-missing.tsx
frontend/components/landing/: cta.tsx  faq.tsx  features.tsx  github-mark.tsx  hero.tsx  how-it-works.tsx  review-demo.tsx  site-footer.tsx  site-header.tsx  stats.tsx  trust-bar.tsx
frontend/lib/: analyze.ts  auth.ts  crawl.ts  github.ts  ingest.ts  prisma.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260627132706_add_repo_ast/: migration.sql
frontend/prisma/migrations/20260627181800_add_crawl_run_screen/: migration.sql
(+17 files in other folders)
