[project]
name = "backend"
version = "0.1.0"
description = "Repo AST analysis service: fetches a GitHub repo, parses Python into an AST T-format tree, and describes each file/class/function via OpenRouter LLMs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
